added a lot of automatic computation for class. benchmark'

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Custom
 **/energy_consumption_temp_*.csv
+Tests Jonas/fashion_mnist_features_*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
