--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # Custom
-**/energy_consumption_temp_*.csv
-Tests Jonas/fashion_mnist_features_*
-Tests Jonas/conv_features/*
-Tests Jonas/data/*
+energy_consumption_temp_*.csv
+fashion_mnist_features_*
+conv_features/*
+data/*
 .vscode/*
+opu_features/*
 
 
 # Byte-compiled / optimized / DLL files
